# brigade

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DREAMS.md  GOVERNANCE.md  IDENTITY.md  INSTALL_FOR_AGENTS.md  MAINTAINERS.md  MANIFEST.in  MEMORY.md  QUICKSTART.md  README.md  RELEASE.md  ROADMAP.md  SAFETY_RULES.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TOOLS.md  pyproject.toml  registry.json
.claude/memory-handoffs/: TEMPLATE.md
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  ingester-misclassified.yml  profile-init-fails.yml  quickstart.yml
.github/workflows/: ci.yml  publish.yml
.grok/memory-handoffs/processed/: 2026-07-09-0714-sidecar-synergy-stations.md  20260709-073744-sidecar-station-clis-20260709T085613Z.md  20260709-073856-mcp-sync-user-scope.md  20260709-073905-mcp-sync-user-scope.md  20260709-074518-mcp-fidelity-and-grok-adapter-20260709T085613Z.md  (+1 more)
docs/: agent-assisted-setup.md  agent-notify-import-rehearsal.md  agents-guide.md  announcement-draft.md  announcement-post.md  backup-health.md  chat-surfaces.md  closeout-receipts.md  code-reference-schema.md  code-review.md  cold-start-testing.md  command-inventory.md  component-manifest-policy.md  component-manifest-v1.schema.json  context-packs.md  deliberation-experiment.md  first-10-minutes.md  handoff-promotion.md  hermes-handoffs.md  import-schema.md  inspiration-patterns.md  internal-dogfood.md  issue-444-parts-3-4-plan.md  mcp-sync.md  memory-care.md  model-ratings.md  model-trial-taxonomy.md  new-user-quickstart.md  openclaw-memory-ingest-checklist.md  operator-center.md  overview.md  phase-115-164-plan.md  phase-226-250-plan.md  phase-355-pinned-component-setup.md  phase-4a-compatibility-and-archive.md  phase-61-100-plan.md  phase-acpx-cursor-adapter.md  phase-eval-cell-identity.md  phase-execution-ledger.md  phase-explicit-station-status.md  (+31 more)
docs/assets/: brigade-demo.cast  brigade-ecosystem.excalidraw.json  brigade-local-loop.excalidraw.json  brigade-memory-flow.excalidraw.json  command-inventory-flow.excalidraw.json  handoff-promotion-flow.excalidraw.json  hermes-handoff-flow.excalidraw.json  internal-dogfood-flow.excalidraw.json  openclaw-ingest-flow.excalidraw.json  quickstart.cast  repo-fleet-flow.excalidraw.json  security-flow.excalidraw.json  technical-guide-design.excalidraw.json  tool-catalog-flow.excalidraw.json
docs/audit/: 2026-06-10-line-check.md  2026-06-16-improvements-and-features-board.md
docs/design/: activegraph-inspiration.md  context-blind-spot.md  route-outcome-cohort.md
docs/examples/: hermes-handoff-smoke.md
docs/proposals/: harness-contract.v1.schema.json  route-recomposition.md
docs/research/: issue-258-harness-contract-v1.md
docs/runbooks/: cold-start-gate.json  cold-start-gate.sh  hyper-v-native-acceptance.md
engines/code-graph/: CHANGELOG.md  README.md  build.rs  station.json
engines/evidence-ledger/: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  install.sh  station.json
memory/cards/: memory-scanner.md
public/r/: bug-hunt.json  check.json  latent-premises.json  reduce.json  refire.json  retry-safety.json  taste.json
registry/: README.md
runs/experiment/: README.md  account-tokens.py  check-public-artifacts.sh  issue-442-results-comment.md  retry-sample.sh  run-case.sh  scored-comparison.md  scored-results.json  token-accounting.json  validate-results.py
schemas/: code-reference.v1.canonical-vector.json  code-reference.v1.integer-vectors.json  code-reference.v1.schema.json
scripts/: benchmark_issue266_work_status_memory.py  generate_component_manifest.py  hyper-v-native-acceptance.ps1  managed_snapshot.py  published-artifact-acceptance.py  record-quickstart-demo.sh  smoke-mcp  verify  verify_component_manifest_provenance.py  version_sync.py  windows-native-acceptance.ps1
skills/note/: SKILL.md
src/brigade/: __init__.py  __main__.py  aboyeur.py  acpx_adapter.py  actionqueue.py  add.py  agent_skill_format.py  agents.py  budgets.py  budgets_cmd.py  center_cmd.py  chat_cmd.py  cli.py  code_cmd.py  code_references.py  codex_appserver.py  codex_cloud.py  completions.py  component_bins.py  component_install.py  component_manifest.py  component_paths.py  component_report.py  component_state.py  config.py  context_cmd.py  context_eval.py  cursor_user_cmd.py  daily_cmd.py  deliberation.py  doctor.py  dogfood_cmd.py  evidence_brief.py  evidence_cmd.py  evidence_runtime.py  extras.py  fragments.py  friction_cmd.py  graphtrail_delta.py  handoff.py  (+82 more)
src/solo_mise/: __init__.py  cli.py  doctor.py  ingest.py  init.py  templates.py
stations/notify/: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  go.mod
tests/: component_install_helpers.py  conftest.py  fake_appserver.py  issue266_fixture.py  test_aboyeur.py  test_aboyeur_status.py  test_acpx_adapter.py  test_actionqueue.py  test_add.py  test_agent_notify_station_contracts.py  test_agent_skill_format.py  test_agent_write_probes.py  test_agents.py  test_agents_model_pin.py  test_agents_windows_executable.py  test_budgets.py  test_center_report_cmd.py  test_ci_workflow.py  test_claude_hooks_doctor.py  test_claude_hooks_runtime.py  test_claude_hooks_settings_merge.py  test_cli_help.py  test_cli_setup.py  test_cli_update.py  test_code_reference_schema.py  test_code_verbs_and_target.py  test_codex_appserver.py  test_codex_appserver_integration.py  test_codex_cloud.py  test_completions.py  test_component_bins.py  test_component_install.py  test_component_manifest.py  test_component_manifest_provenance.py  test_component_paths.py  test_component_report.py  test_component_state.py  test_config.py  test_context_cmd.py  test_cursor_install_state_migration.py  (+173 more)
tests/guard/: __init__.py  test_allow_cli.py  test_allow_values.py  test_audit.py  test_baseline.py  test_cli.py  test_engine.py  test_rules.py
tests/memory_doctor/: test_embedded.py
tools/: antislop.md  draft7_validator.py  frontend.md  harness_conformance_probe.py  simplify.md  superpowers.md
(+829 files in other folders)
