[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brigade-cli"
version = "0.13.0"
description = "One local source for the MCP servers, tools, and memory your AI coding agents share (Codex, Claude Code, OpenCode, Hermes, OpenClaw), merged into each tool's native config with a review gate and a receipt for every change."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Solomon Neas", email = "me@solomonneas.dev" }] # content-guard: allow email
keywords = ["agents", "ai-agents", "agent-memory", "agent-handoffs", "ai-memory", "mcp", "mcp-config", "mcp-sync", "model-context-protocol", "openclaw", "claude-code", "codex", "opencode", "memory", "bootstrap", "brigade", "brigade-cli", "operator", "local-first", "guardrails", "agents-md"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.15"]
research = ["playwright>=1.40"]

[project.urls]
Homepage = "https://brigade.tools"
Documentation = "https://brigade.tools/docs"
Repository = "https://github.com/escoffier-labs/brigade"
Cookbook = "https://github.com/escoffier-labs/solos-cookbook"
OpenClaw = "https://github.com/solomonneas/openclaw"
ContentGuard = "https://github.com/escoffier-labs/content-guard"
AgentPantry = "https://github.com/escoffier-labs/agentpantry"
Issues = "https://github.com/escoffier-labs/brigade/issues"

[project.scripts]
brigade = "brigade.cli:main"
solo-mise = "brigade.cli:main_deprecated"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
brigade = ["py.typed", "templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
# Pragmatic gate: ruff's default rule set (pyflakes plus the E4/E7/E9
# pycodestyle errors) plus bugbear (B). Deferred for later, separate
# passes: import sorting (I), pyupgrade (UP), the full pycodestyle E/W
# set, and any type checking (mypy/pyright).
select = ["B", "E4", "E7", "E9", "F"]
