[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brigade-cli"
version = "0.18.0"
description = "One local source for the MCP servers, tools, and memory your AI coding agents share (Codex, Claude Code, OpenCode, Hermes, OpenClaw), merged into each tool's native config with a review gate and a receipt for every change."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Solomon Neas", email = "me@solomonneas.dev" }] # content-guard: allow email
keywords = ["agents", "ai-agents", "agent-memory", "agent-handoffs", "ai-memory", "mcp", "mcp-config", "mcp-sync", "model-context-protocol", "openclaw", "claude-code", "codex", "opencode", "memory", "bootstrap", "brigade", "brigade-cli", "operator", "local-first", "guardrails", "agents-md"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=5", "ruff>=0.15", "mypy>=1.11"]
research = ["playwright>=1.40"]

[project.urls]
Homepage = "https://brigade.tools"
Documentation = "https://brigade.tools/docs"
Compare = "https://brigade.tools/compare/sync-mcp-servers-across-coding-agents"
Repository = "https://github.com/escoffier-labs/brigade"
Cookbook = "https://github.com/escoffier-labs/solos-cookbook"
OpenClaw = "https://github.com/solomonneas/openclaw"
ContentGuard = "https://github.com/escoffier-labs/content-guard"
AgentPantry = "https://github.com/escoffier-labs/agentpantry"
Issues = "https://github.com/escoffier-labs/brigade/issues"

[project.scripts]
brigade = "brigade.cli:main"
solo-mise = "brigade.cli:main_deprecated"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
brigade = ["py.typed", "templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
# Pragmatic gate: ruff's default rule set (pyflakes plus the E4/E7/E9
# pycodestyle errors) plus bugbear (B). Deferred for later, separate
# passes: import sorting (I), pyupgrade (UP), and the full pycodestyle
# E/W set.
select = ["B", "E4", "E7", "E9", "F"]

[tool.mypy]
# The package ships py.typed, so the annotations are validated in CI.
# Lenient baseline: new modules are checked from day one; the legacy
# modules below predate the gate and are ratcheted in over time. To
# claim one, delete its override entry and fix what mypy reports.
files = ["src/brigade"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "brigade.aboyeur",
    "brigade.center_cmd",
    "brigade.cli.run",
    "brigade.daily_cmd",
    "brigade.doctor",
    "brigade.handoff_cmd",
    "brigade.learn_cmd",
    "brigade.mcp_adapters",
    "brigade.mcp_cmd",
    "brigade.mcp_server",
    "brigade.operator_cmd.adoption",
    "brigade.operator_cmd.health",
    "brigade.operator_cmd.lifecycle",
    "brigade.operator_cmd.migration",
    "brigade.operator_cmd.surfaces",
    "brigade.phases_cmd.checks_actions",
    "brigade.phases_cmd.constants",
    "brigade.phases_cmd.session_lifecycle",
    "brigade.phases_cmd.session_ops",
    "brigade.release_cmd",
    "brigade.security_cmd",
    "brigade.skills_cmd",
    "brigade.work_cmd.backup",
    "brigade.work_cmd.imports",
    "brigade.work_cmd.ledger",
    "brigade.work_cmd.reviews",
    "brigade.work_cmd.scanners",
    "brigade.work_cmd.services",
    "brigade.work_cmd.session",
    "brigade.work_cmd.sweeps",
    "brigade.work_cmd.verification",
]
ignore_errors = true
